# Research_Project

./: README.md  main.py  pyproject.toml
Test_run/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
Test_run/central_ros2/kpi_metrics/: bandwidth_stats.json  derived_kpis.json  kpi_events.jsonl  latency_metrics.json  resource_profile.json  robustness_metrics.json
Test_run/central_ros2/trajectories/: trajectory_a.csv  trajectory_b.csv  trajectory_c.csv
Test_run/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
Test_run/ddf_ros2_mp_paced/kpi_metrics/: bandwidth_stats.json  derived_kpis.json  kpi_events.jsonl  kpi_events_a.jsonl  kpi_events_b.jsonl  kpi_events_c.jsonl  latency_metrics.json  resource_profile.json  robustness_metrics.json
Test_run/ddf_ros2_mp_paced/trajectories/: agent_status_a.json  agent_status_b.json  agent_status_c.json  trajectory_a.csv  trajectory_b.csv  trajectory_c.csv
cosmo_slam_centralised/: __init__.py  bandwidth.py  graph.py  isam.py  kpi_derive.py  kpi_logging.py  latency.py  loader.py  loader_copy.py  metrics.py  models.py  resource_monitor.py  robust.py  source.py  viz.py
cosmo_slam_common/: __init__.py  bandwidth.py  kpi_logging.py  latency.py  metrics.py  resource_monitor.py  viz.py
cosmo_slam_decentralised/: __init__.py  agents.py  bandwidth.py  communication.py  ddf_sam copy.py  ddf_sam.py  mp_runner.py  partition.py
cosmo_slam_ros2/: __init__.py  ack.py  factor_batch.py  impair.py  interface_msg.py  qos.py  sim_time.py
datasets/COSMO/proradio/: kth_r3_00_d06_d09_d10_proradio.jrl  kth_r3_01_n01_n04_n05_proradio.jrl  ntu_r3_02_d02_n04_n13_proradio.jrl  tuhh_r3_00_day_proradio.jrl  tuhh_r3_01_night_proradio.jrl
datasets/COSMO/wifi/: kth_r3_00_d06_d09_d10_wifi.jrl  kth_r3_01_n01_n04_n05_wifi.jrl  ntu_r3_02_d02_n04_n13_wifi.jrl  tuhh_r3_00_day_wifi.jrl  tuhh_r3_01_night_wifi.jrl
plots/scalability/: day_night_metrics.json  scalability_metrics.json  wifi_base_vs_impair_deltas.json  wifi_base_vs_impair_metrics.json
results for evaluation/proradio_base/proradio_day_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_day_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_maincampus_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_maincampus_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_night_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_night_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r3_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r3_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r3_kth_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r3_kth_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r4_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r4_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r4_kth_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r4_kth_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r5_base/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_base/proradio_r5_base/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_impair/proradio_r3_impair/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_impair/proradio_r3_impair/ddf_ros2_mp_paced/: decentralised_stats.json  gt_metrics.json  rpe_metrics.csv
results for evaluation/proradio_impair/proradio_r4_impair/central_ros2/: graph_stats.json  gt_metrics.json  rpe_metrics.csv
scripts/: run_proradio_base_suit  run_proradio_impair_suit  run_suite.sh  run_wifi_base_suit  run_wifi_impair_suit
src/data_playback/: package.xml  setup.cfg  setup.py
src/data_playback/data_playback/: generic_listener.py  imu_listener.py
src/data_playback/launch/: multi_agent_playback.launch.py
src/orchestrator/: package.xml  setup.cfg  setup.py
src/orchestrator/launch/: multi_agent_centralized.launch.py  orchestrator.launch.py
src/slam_centralized/: package.xml  setup.cfg  setup.py
src/slam_centralized/slam_centralized/: backend_node.py
src/slam_icp_frontend/: CMakeLists.txt  package.xml
src/slam_icp_frontend/src/: lidar_icp_node.cpp
src/slam_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/slam_interface/msg/: Keyframe.msg
src/slam_interface/slam_interface/: agent_node.py
src/slam_tools/: package.xml  setup.cfg  setup.py
src/slam_tools/slam_tools/: gt_align_once.py  gt_publisher_s3e.py  static_tf_from_yaml.py
tools/: compare_backends.py  export_kpis.py  orchestrate_kpi.base.json  orchestrate_kpi.example.json  orchestrate_kpi.py  orchestrate_kpi_cs.py  plot_scaling.py  ros2_factor_publisher.py
(+647 files in other folders)
