<?xml version="1.0"?>
<package format="3">
  <name>slam_icp_frontend</name>
  <version>0.1.0</version>
  <description>ICP front‐end for centralized SLAM</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Tell ament to build this -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- normal dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>

  <export>
    <!-- explicitly declare this is an ament_cmake package -->
    <build_type>ament_cmake</build_type>
  </export>
</package>


